게시판 불러오기 완성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,13 @@ jwt.secret.key=P@ssw0rd
 
 # socail login
 kakao.restapi.key=bc103cc79e3be73f62212e94cb7a6232
-kakao.redirect.url=http://127.0.0.1:3000/flow/kakao/callback
-kakao.redirect.uri=http://127.0.0.1:3000/flow/kakao/callback
+kakao.redirect.url=http://127.0.0.1:8080/app_comunity/v1/oauth/kakao/token
+
 
 naver.restapi.id=E5H6itbd69UPloGEZQ_S
 naver.restapi.key=8R7gnwGiWi
 naver.restapi.uri=http://127.0.0.1:8080/app_comunity/v1/oauth/naver/token
 
 #
-upload.server=1
-upload.basedir=2
+upload.server=http://127.0.0.1:8080
+upload.basedir=d://app_comunity/post/images
