--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://database.cuwycol4ju3m.ap-northeast-2.rds.amazonaws.com:3306/app_community
+spring.datasource.url=jdbc:mysql://mysql.cjhaycyxwtq4.ap-northeast-2.rds.amazonaws.com:3306/app_comunity
 spring.datasource.username=admin
 spring.datasource.password=1q2w3e4r
 
@@ -16,7 +16,7 @@ jwt.secret.key=P@ssw0rd
 
 # socail login
 kakao.restapi.key=bc103cc79e3be73f62212e94cb7a6232
-kakao.redirect.url=http://127.0.0.1:8080/app_comunity/v1/oauth/kakao/token
+kakao.redirect.uri=http://127.0.0.1:8080/app_comunity/v1/oauth/kakao/token
 
 
 naver.restapi.id=E5H6itbd69UPloGEZQ_S
@@ -25,5 +25,5 @@ naver.restapi.uri=http://127.0.0.1:8080/app_comunity/v1/oauth/naver/token
 
 #
 upload.server=http://127.0.0.1:8080
-upload.basedir=d:/app_comunity/post/images
+upload.basedir=d:/attach/app_comunity/images
 
