--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://database.cuwycol4ju3m.ap-northeast-2.rds.amazonaws.com:3306/app_community
 spring.datasource.username=admin
@@ -16,7 +16,7 @@ jwt.secret.key=P@ssw0rd
 
 # socail login
 kakao.restapi.key=bc103cc79e3be73f62212e94cb7a6232
-kakao.redirect.url=http://127.0.0.1:8080/app_comunity/v1/oauth/kakao/token
+kakao.redirect.uri=http://127.0.0.1:8080/app_comunity/v1/oauth/kakao/token
 
 
 naver.restapi.id=E5H6itbd69UPloGEZQ_S
