--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://mysql.cjhaycyxwtq4.ap-northeast-2.rds.amazonaws.com:3306/app_comunity
+spring.datasource.url=jdbc:mysql://database.cuwycol4ju3m.ap-northeast-2.rds.amazonaws.com:3306/app_community
 spring.datasource.username=admin
 spring.datasource.password=1q2w3e4r
 
